Fix: return response in transaction history